--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <script src="javascript.js"></script>
-    <span>Do you or someone you know deal with mental health problems?</span>
+    <span>Do you or someone you know suffer from mental health problems?</span>
     <div>
         <input type="radio" id="yes" name="question-1" value="yes" />
         <label for="yes">yes</label>
