--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Wow Project">
     <meta name="author" content="Jeneil">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -87,6 +89,7 @@
         </div>
     </form>
     <a href="./resources.html">link</a>
+    <ul id='resources-list'></ul>
 </body>
 <script src="javascript.js"></script>
 
