--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Jeneil">
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="module" src="NIMH_data.json"></script>
+
 </head>
 
 <body>
@@ -91,6 +91,8 @@
     <a href="./resources.html">link</a>
     <ul id='resources-list'></ul>
 </body>
-<script src="javascript.js"></script>
+<script type="module" src="NIMH_data.js"></script>
+<script type="module" src="javascript.js"></script>
+
 
 </html>
