--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <a href="./resources.html">link</a>
     <ul id='resources-list'></ul>
 </body>
-<script type="module" src="NIMH_data.js"></script>
+<script type="module" src="NIMH_data.json"></script>
 <script type="module" src="javascript.js"></script>
 
 
