--- a/index.html
+++ b/index.html
@@ -17,63 +17,63 @@
         <span>Do you or someone you know suffer from any mental health illnesses?</span>
         <div>
             <input type="radio" id="yes" name="question-1" value="yes" required />
-            <label for="yes">yes</label>
+            <label for="yes">Yes</label>
         </div>
         <div>
             <input type="radio" id="no" name="question-1" value="no" required />
-            <label for="no">no</label>
+            <label for="no">No</label>
         </div>
         <div>
             <input type="radio" id="maybe" name="question-1" value="maybe" required />
-            <label for="maybe">maybe</label>
+            <label for="maybe">Maybe</label>
         </div>
         <span>Do you or a loved one suffer from thoughts of suicide, substance abuse, depression, or anxiety?</span>
         <div>
             <input type="radio" id="yes" name="question-2" value="yes" required />
-            <label for="yes">yes</label>
+            <label for="yes">Yes</label>
         </div>
         <input type="radio" id="no" name="question-2" value="no" required />
-        <label for="no">no</label>
+        <label for="no">No</label>
         </div>
         <div>
             <input type="radio" id="maybe" name="question-2" value="maybe" required />
-            <label for="maybe">maybe</label>
+            <label for="maybe">Maybe</label>
         </div>
         <span>Have you ever considered counseling or recovery treatment?</span>
         <div>
             <input type="radio" id="yes" name="question-3" value="yes" required />
-            <label for="yes">yes</label>
+            <label for="yes">Yes</label>
         </div>
         <input type="radio" id="no" name="question-3" value="no" required />
-        <label for="no">no</label>
+        <label for="no">No</label>
         </div>
         <div>
             <input type="radio" id="maybe" name="question-3" value="maybe" required />
-            <label for="maybe">maybe</label>
+            <label for="maybe">Maybe</label>
         </div>
         <span>Are you prescribed any medication for mental health related problems?</span>
         <div>
             <input type="radio" id="yes" name="question-4" value="yes" required />
-            <label for="yes">yes</label>
+            <label for="yes">Yes</label>
         </div>
         <input type="radio" id="no" name="question-4" value="no" required />
-        <label for="no">no</label>
+        <label for="no">No</label>
         </div>
         <div>
             <input type="radio" id="maybe" name="question-4" value="maybe" required />
-            <label for="maybe">maybe</label>
+            <label for="maybe">Maybe</label>
         </div>
         <span>Are you concerned about you or a loved one's safety?</span>
         <div>
             <input type="radio" id="yes" name="question-5" value="yes" required />
-            <label for="yes">yes</label>
+            <label for="yes">Yes</label>
         </div>
         <input type="radio" id="no" name="question-5" value="no" required />
-        <label for="no">no</label>
+        <label for="no">No</label>
         </div>
         <div>
             <input type="radio" id="maybe" name="question-5" value="maybe" required />
-            <label for="maybe">maybe</label>
+            <label for="maybe">Maybe</label>
         </div>
         <div>
             <span>Which of the following apply to you:</span>
@@ -84,14 +84,15 @@
             <label for="question-2"> I am often uninspired</label><br>
             <input type="checkbox" name="option3" value="Happy">
             <label for="question-3"> I am often happy</label><br><br>
-            <input type="submit" value="Submit" id="submit-button">
             </p>
         </div>
+        <div>
+            <a href="./resources.html">submit</a>
+        </div>
     </form>
-    <a href="./resources.html">link</a>
     <ul id='resources-list'></ul>
 </body>
-<script type="module" src="NIMH_data.json"></script>
+<!-- <script type="module" src="NIMH_data.js"></script> -->
 <script type="module" src="javascript.js"></script>
 
 
