--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,6 @@
     
     <h1>Resources</h1>
 </div>
-<form>
-    
-</form>
+    <ul id='resources-list'></ul>
+    <script type="module" src="javascript.js"></script>
 </html>
