--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
             <label for="question-3"> I am often happy</label><br><br>
             </p>
         </div>
+        <div id="error-message-div"></div>
         <div>
-            <a href="./resources.html">submit</a>
+            <a id="submit-button" class="submit-button" href="./resources.html">submit</a>
         </div>
     </form>
     <ul id='resources-list'></ul>
