--- a/resources.html
+++ b/resources.html
@@ -15,5 +15,5 @@
     <h1>Resources</h1>
 </div>
     <ul id='resources-list'></ul>
-    <script type="module" src="javascript.js"></script>
+    <script src="resources.js"></script>
 </html>
